styles.css
:root {
  --yellow-color: #fdc913;
  --grey-light-color: #5f5f5f;
  --grey-dark-color: #292929;
  --red-color: #ce2829;
  --beige-color: #faf7f2;
  --white-color: #ffffff;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  font-family: 'Roboto Condensed', system-ui;
  background-color: var(--beige-color);
}

a {
  text-decoration: none;
  color: var(--white-color);
}

.container {
  width: 100%;
  margin: 0 auto;
}

.btn {
  font-family: 'Barlow', system-ui;
  padding: 1rem 3rem;
  border: none;
  border-radius: 30px;
  cursor: pointer;
}

.btn:hover {
  opacity: 0.8;
}

.order-btn {
  color: var(--red-color);
  background-color: var(--white-color);
  font-weight: 600;
  padding: 1rem 2rem;
}

.header-btn {
  background-color: var(--yellow-color);
  color: var(--grey-dark-color);
  font-weight: 600;
}

/*HEADER*/
.header-section {
  background: url(./assets/iteration-1/home-banner.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  padding: 3rem;
}

.header-section img {
  width: 20rem;
  height: auto;
}

.header-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #ffffff;
  max-width: 550px;
  gap: 0.5rem;
}

.header-headings {
  text-align: center;
}

.italic-heading {
  margin-top: 3rem;
  font-family: 'Satisfy', system-ui;
  color: var(--yellow-color);
  font-size: 2rem;
}

.main-heading {
  font-weight: 300;
  text-transform: uppercase;
  font-size: 7.7vh;
}

/*NAVBAR*/
nav {
  background-color: var(--white-color);
}

.menu-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 1.2rem 0;
  gap: 1rem;
}

.menu-items a {
  text-align: center;
  font-family: 'Barlow', system-ui;
  font-weight: 500;
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 0.5rem;
  color: var(--grey-dark-color);
}

.nav-item-icon img {
  width: 2.5rem;
}

/*card-section*/

.card-section {
  margin: 3rem 0;
}

.cards {
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
  justify-content: center;
  gap: 0.5rem;
  color: var(--white-color);
}

.card {
  flex: 1;
  width: 100%;
  padding: 2.5rem;
  border-radius: 10px;
  gap: 1rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  font-family: 'Barlow', system-ui;
  font-weight: 600;
}

.mini-cards {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  font-size: 1.3rem;
}

.mini-cards .card h3 {
  width: 50%;
  font-weight: 600;
}

.mini-cards a {
  font-size: 0.7rem;
}

.card-1 {
  background: url('assets/iteration-2/cta/kart-1.png') center/cover no-repeat;
}

.card-1 h1 {
  font-size: 4.2rem;
  font-family: 'Quattrocento', system-ui;
  font-weight: 700;
}

.card-2 {
  background: url('assets/iteration-2/cta/kart-2.png') center/cover no-repeat;
}

.card-3 {
  background: url('assets/iteration-2/cta/kart-3.png') right/cover no-repeat;
  color: var(--grey-dark-color);
}

.card-3-span {
  color: var(--red-color);
}

/*MENU*/

.menu-section {
  margin-bottom: 3rem;
}

/*menu-nav*/
.active {
  background: var(--grey-dark-color) !important;
  color: var(--white-color) !important;
}

.menu-headings {
  text-align: center;
}

.menu-headings .italic-heading {
  color: var(--red-color);
}

.main-menu-heading {
  font-family: 'Barlow', system-ui;
  font-weight: 600;
  font-size: 2.2rem;
  color: var(--grey-dark-color);
}

.bottom-menu {
  background: var(--beige-color);
  padding: 2rem 0;
}

.bottom-menu a {
  background: var(--white-color);
  padding: 0.5rem 1.3rem;
  border-radius: 3rem;
}

/*menu cards*/

.menu-cards {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 1.5rem;
  font-family: 'Barlow', system-ui;
  font-weight: 600;
  color: var(--grey-dark-color);
}

.menu-card {
  flex: 1;
  background: var(--white-color);
  padding: 1.5rem;
  border-radius: 10px;
}

.menu-card img {
  width: 100%;
  height: auto;
}

.menu-card-titles h3 {
  margin: 1rem 0;
}

.menu-cards .stats {
  display: flex;
  justify-content: space-between;
}

.stats .reviews {
  color: var(--grey-light-color);
  display: flex;
  align-items: center;
  gap: 0.5rem;
  font-size: 0.9rem;
}

.price {
  font-size: 1.3rem;
}

/*FOOTER*/

footer {
  background: #1a1a1a;
  color: var(--white-color);
  font-family: 'Barlow', system-ui;
}

.footer-content {
  padding: 4rem 0;
  gap: 5rem;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.footer-item {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.footer-item > :first-child {
  margin-bottom: 2rem;
}

.contact img {
  width: 10rem;
}

.contact-item {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.contact-item img {
  width: 2rem;
}

.footer-item h3 {
  margin-bottom: 1rem;
  font-weight: 500;
}

.instagram-gallery .gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  row-gap: 1rem;
}

.instagram-gallery .gallery img {
  width: 30%;
}

.copyright {
  border-top: 1px solid var(--grey-light-color);
  padding: 2rem 0;
  font-size: 0.8rem;
}

.copyright-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.copyright-content .socials {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
}

.copyright-content .socials a {
  width: 1.2rem;
}

.copyright-content .socials img {
  width: 100%;
  height: 100%;
}

@media (max-width: 576px) {
  html {
    font-size: 12px;
  }

  .container {
    max-width: 300px;
  }

  .menu-items a {
    flex: 1 1 calc(50% - 10px);
  }

  .header-headings .italic-heading {
    display: none;
  }

  .main-menu-heading {
    font-size: 3.4rem;
  }

  .menu-cards {
    flex-direction: column;
  }

  .footer-content {
    flex-direction: column;
  }
}

@media (min-width: 576px) {
  .container {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .container {
    max-width: 960px;
  }
}

